--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -143,6 +143,7 @@ input.post-button {
 	text-align: justify;
   line-height: 0;
   top: 8px;
+  background: $turquoise-dark;
 
   &:after {
 	  content: "";
@@ -287,14 +288,17 @@ input.post-button {
 // Speech bubbles
 blockquote.speech {
     position: relative;
-    padding: 50px 15px;
+    padding: 50px 30px;
     margin: 1em 0 3em;
     text-align: center;
     color: white;
     background: $dark-sky-blue;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
+    @include radius(35px);
+    border-left: none;
+    p {
+    	color: white;
+    	font-family: $avenir-reg;
+    }
     &:before {
 	    content: "";
 			position: absolute;
@@ -311,13 +315,39 @@ blockquote.speech {
     // Duplicate for coloration on bottom
     .under {
     	position: absolute;
-	    top: -13px;
+	    top: -6px;
 	    left: 0;
-    	background: $color-seafoam;
+    	background: $cerulean;
 	    z-index: -1;
-	    border-radius: 15px;
 	    border-left: none;
+	    &:before {
+		    border-top: 26px solid $cerulean;
+	    }
     }
+}
+.speech {
+
+  // "Next buttons"
+  button {
+    position: absolute;
+    display: flex;
+    background: none;
+    border: none;
+    right: 11%;
+  	font-family: "AvenirNext-Bold";
+  	&:before {
+  		position: absolute;
+  		content: "";
+			bottom: 10px;
+	    left: 48px;
+	    width: 0;
+	    height: 0;
+	    border-left: 8px solid white;
+	    border-top: 5px solid transparent;
+	    border-bottom: 5px solid transparent;
+	  }
+  }
+
 }
 
 // BOTTOM BAR (COINS, NEXT)
