fix game creation bug update buttons and input stage styling

--- a/public/styles/_core/forms.scss
+++ b/public/styles/_core/forms.scss
@@ -40,9 +40,9 @@
 		
 	  &:focus {
 	    outline: none !important;
-	    border:6px solid #00c5c2;
+	    // border:6px solid #00c5c2;
 
-	    box-shadow: 0 0 10px #719ECE;
+	    // box-shadow: 0 0 10px #719ECE;
 		}
 	}
 
