--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -124,10 +124,10 @@
                         <button id="btn-role-card">role card</button>
                         <button id="btn-menu">menu</button>
                     </div>
-                        <div id="currency" class="col-sm-6 col-xs-6">
-                            <div id="player-coins">[coins] <span></span></div>
-                            <div id="pot-coins">[pot] <span></span></div>
-                        </div>
+                    <div id="currency" class="col-sm-6 col-xs-6">
+                        <div id="pot-coins"><p>coin pot</p><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/pot_stroke.png" > <span></span></div>
+                        <div id="player-coins"><p>your coins</p><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/coin_stroke.png" > <span></span></div>
+                    </div>
                     
                 </footer>
 
