--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -20,6 +20,7 @@
 		display: block;
 			position: fixed;
 			right: 0;
+			bottom: 0;
 			margin-bottom: 10px;
 			color: $turquoise-light;
 			width: 96px;
@@ -102,11 +103,12 @@
 			border-radius:0px;
 			height:auto;
 			padding:0px;
-			margin: 0 auto;
+			margin: 0px;
+			margin-right: 20px;
 			margin-bottom: 10px;		
 			background-color: transparent;
 			font-weight: 800;
-
+			float:right;
 		}
 
 		.username {
