Fixes and improvements for players leaving/disconnecting and re-joining game, added config for player timeout, refactor of sockets/PlayerLogin, fixes for how to store player UID and check if it should be re-used, added ‘player:lost’ event.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -44,6 +44,13 @@
             <div id="overlay" class="modal">
             </div>
 
+            <section id="error-player-disconnected" class="modal error-modal">
+                <div id="text" class="col-sm-8 col-centered">
+                  <h1>Hmmm....</h1>
+                  <h2>It looks like <span id="player"></span> got disconnected from the game! They have <span id="time">60s</span> to reconnect before the game ends!</h2>
+                </div>
+            </section>
+
             {{!-- STAGES BAR --}}
             <section class="col-sm-12" id="stages-bar">
                     <span id="progress"></span>
