--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -19,6 +19,11 @@ html, body {
 	height:100%;
 	// overflow:hidden;
 }
+	
+.error-modal {
+	background-color: rgba(254, 120, 70, 0.9);
+	color: white;
+}
 
 .text.centered {
 	text-align:center;
